Fixed dialog appearance on Safari

--- a/modules/common-styling/public/assets/style/pos-dialog.css
+++ b/modules/common-styling/public/assets/style/pos-dialog.css
@@ -33,7 +33,7 @@
 
   /*  looks
   ============================================================================ */
-  .pos-dialog:open {
+  .pos-dialog[open] {
     opacity: 1;
     scale: 1;
   }
@@ -57,7 +57,7 @@
   }
 
   @starting-style {
-    .pos-dialog:open {
+    .pos-dialog[open] {
         opacity: 0;
         scale: 0;
     }
